refactor: remove unnecessary use of fully qualified name